// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-ai - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Use for Azure AI: Search, Speech, OpenAI, Document Intelligence. Helps with search, vector/hybrid search, speech-to-text, text-to-speech, transcription, OCR. USE FOR: AI Search, query search, vector search, hybrid search, semantic search, speech-to-text, text-to-speech, transcribe, OCR, convert text to speech. DO NOT USE FOR: Function apps/Functions (use azure-functions), databases (azure-postgres/azure-kusto), resources, AI agents/prompt flows (use microsoft-foundry).",
  "extractedKeywords": [
    "agents",
    "apps",
    "azure",
    "azure-functions",
    "azure-kusto",
    "azure-postgres",
    "cli",
    "convert",
    "databases",
    "document",
    "flows",
    "function",
    "functions",
    "helps",
    "hybrid",
    "intelligence",
    "mcp",
    "microsoft-foundry",
    "openai",
    "prompt",
    "query",
    "resources",
    "search",
    "semantic",
    "speech",
    "speech-to-text",
    "text",
    "text-to-speech",
    "transcribe",
    "transcription",
    "vector",
    "with",
  ],
  "name": "azure-ai",
}
`;

exports[`azure-ai - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agents",
  "apps",
  "azure",
  "azure-functions",
  "azure-kusto",
  "azure-postgres",
  "cli",
  "convert",
  "databases",
  "document",
  "flows",
  "function",
  "functions",
  "helps",
  "hybrid",
  "intelligence",
  "mcp",
  "microsoft-foundry",
  "openai",
  "prompt",
  "query",
  "resources",
  "search",
  "semantic",
  "speech",
  "speech-to-text",
  "text",
  "text-to-speech",
  "transcribe",
  "transcription",
  "vector",
  "with",
]
`;
